<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactViewer">

    <TextView
        android:id="@+id/firstNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/first_name_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/no_first_name"
        app:layout_constraintBottom_toBottomOf="@+id/firstNameTitle"
        app:layout_constraintStart_toEndOf="@+id/firstNameTitle"
        app:layout_constraintTop_toTopOf="@+id/firstNameTitle" />

    <TextView
        android:id="@+id/lastNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/last_name_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTitle" />

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/no_last_name"
        app:layout_constraintBottom_toBottomOf="@+id/lastNameTitle"
        app:layout_constraintStart_toEndOf="@+id/lastNameTitle"
        app:layout_constraintTop_toTopOf="@+id/lastNameTitle" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/email_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTitle" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/no_email"
        app:layout_constraintBottom_toBottomOf="@+id/emailTitle"
        app:layout_constraintStart_toStartOf="@+id/lastNameText"
        app:layout_constraintTop_toTopOf="@+id/emailTitle" />

    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/phone"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTitle" />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_phone"
        app:layout_constraintBottom_toBottomOf="@+id/phoneTitle"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toTopOf="@+id/phoneTitle" />

</android.support.constraint.ConstraintLayout>